# python-activerecord-postgres

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  codex.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: architecture.md  code_style.md  testing.md
.claude/commands/: test.md
.gemini/: testing.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md  feature_template.md  release_hotfix_template.md
.github/workflows/: changelog-check.yml  publish.yml  test.yml
changelog.d/: 0.added.md  10.added.md  12.added.md  14.added.md  16.added.md  17.added.md  19.added.md  2.added.md  2.fixed.md  20.fixed.md  21.added.md  23.added.md  24.fixed.md  25.added.md  26.added.md  27.added.md  30.added.md  32.added.md  32.changed.md  32.fixed.md  33.added.md  35.security.md  37.changed.md  4.added.md  5.added.md  9.added.md
docker/postgres-all-ext/: Dockerfile  README.md  build.sh  docker-compose.yml
docker/postgres-all-ext/docker-entrypoint-initdb.d/: init-extensions.sh
docs/: LICENSE  README.md
docs/en_US/: README.md
docs/en_US/ddl/: README.md
docs/en_US/installation_and_configuration/: README.md  backend_group.md  configuration.md  encoding.md  installation.md  pool.md  ssl.md
docs/en_US/introduction/: README.md  relationship.md  supported_versions.md
docs/en_US/plugins/: README.md  hstore.md  pg_trgm.md  pgvector.md  postgis.md
docs/en_US/postgres_specific_features/: README.md  dialect.md  explain.md  field_types.md  indexing.md  introspection.md  protocol_support.md  returning.md
docs/en_US/scenarios/: README.md  parallel_workers.md
docs/en_US/testing/: README.md  configuration.md  local.md
docs/en_US/transaction_support/: README.md  deadlock.md  deferrable.md  isolation_level.md  savepoint.md
docs/en_US/troubleshooting/: README.md  connection.md  performance.md
docs/en_US/type_adapters/: README.md  array_comparison.md  arrays.md  custom.md  mapping.md  timezone.md
docs/examples/chapter_02_connection_pool/: README.md  connection_pool_stress_test_async.py  connection_pool_stress_test_sync.py
docs/examples/chapter_04_ddl/: ddl.py
docs/examples/chapter_05_worker_isolation/: README.md  config.py  exp1_shared_connection.py  exp2_isolated_connection.py  exp3_endurance_test.py  models.py
docs/examples/chapter_08_scenarios/parallel_workers/: README.md  config_loader.py  exp1_basic_multiprocess.py  exp2_postgres_async_advantage.py  exp3_deadlock_wrong.py  exp4_partition_correct.py  exp5_multithread_warning.py  exp6_backend_group_pool.py  models.py  setup_db.py
docs/examples/chapter_10_fastapi/: README.md  app.py  config_loader.py  database.py  models.py
docs/examples/chapter_12_named_procedure/: diagram_demo.py  order_workflow.py
docs/examples/chapter_12_named_procedure/queries/: __init__.py  order_queries.py
docs/zh_CN/: README.md
docs/zh_CN/ddl/: README.md
docs/zh_CN/installation_and_configuration/: README.md  configuration.md  encoding.md  installation.md  pool.md  ssl.md
docs/zh_CN/introduction/: README.md  relationship.md  supported_versions.md
docs/zh_CN/plugins/: README.md  hstore.md  pg_trgm.md  pgvector.md  postgis.md
docs/zh_CN/postgres_specific_features/: README.md  dialect.md  explain.md  field_types.md  indexing.md  introspection.md  protocol_support.md  returning.md
docs/zh_CN/scenarios/: README.md  parallel_workers.md
docs/zh_CN/testing/: README.md  configuration.md  local.md
docs/zh_CN/transaction_support/: README.md  deadlock.md  deferrable.md  isolation_level.md  savepoint.md
docs/zh_CN/troubleshooting/: README.md  connection.md  performance.md
docs/zh_CN/type_adapters/: README.md  array_comparison.md  arrays.md  custom.md  mapping.md  timezone.md
scripts/: extension_comparison.py  test_extension_detection.py
tests/: conftest.py
tests/providers/: basic.py  basic_connection.py  events.py  mixins.py  query.py  query_connection.py  registry.py  scenarios.py
tests/rhosocial/activerecord_postgres_test/feature/backend/: conftest.py  test_adapters.py  test_advisory_lock.py  test_async_column_mapping_backend.py  test_async_crud_backend.py  test_backend_explain.py  (+27 more)
(+583 files in other folders)
