[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rhosocial_activerecord_postgres"
version = "1.0.0.dev2"
description = "postgres backend implementation for rhosocial-activerecord, providing a robust and optimized postgres database support."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "vistart", email = "i@vistart.me" }
]
keywords = ["activerecord", "orm", "database", "postgres", "psycopg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "psycopg[binary]",
    "rhosocial-activerecord"
]

[project.optional-dependencies]
# Additional features
pooling = [
    "DBUtils>=3.0.0",
]
# Development dependencies
test = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rhosocial/python-activerecord-postgres"
Documentation = "https://docs.python-activerecord.dev.rho.social"
Repository = "https://github.com/rhosocial/python-activerecord-postgres.git"
Issues = "https://github.com/rhosocial/python-activerecord-postgres/issues"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["rhosocial"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\\.pyi?$' # Corrected escape for backslash

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.towncrier]
package = "rhosocial_activerecord_postgres"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## [{version}] - {project_date}"
template = "changelog.d/template.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/rhosocial/python-activerecord-postgres/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "Performance"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true
